--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -81,11 +81,13 @@ main {
   text-align: center;
   border-radius: 10px;
   padding: 130px 150px;
+  margin-bottom: 120px;
 }
 .section-tittle {
+  text-align: center;
   font-weight: 700;
   font-size: 35px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 .section-description {
   color: #757575;
@@ -101,6 +103,66 @@ main {
   color: #757575;
 }
 .about .info-description {
+  font-weight: 700;
   font-size: 20px;
   color: #474747;
+}
+
+/* What I do styles */
+
+.what-i-do {
+  margin-top: 130px;
+}
+.skills-container {
+  display: flex;
+  gap: 24px;
+}
+.skills {
+  background: #ffffff;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
+}
+.skills-tittle {
+  margin-top: 30px;
+  font-weight: 700;
+  font-size: 20px;
+  color: #181818;
+  margin-bottom: 20px;
+}
+.skill-description {
+  font-weight: 400;
+  color: #757575;
+}
+/* Resume Section */
+
+.resume-content {
+  display: flex;
+  gap: 24px;
+}
+.resume-tittle {
+  font-weight: 700;
+  font-size: 25px;
+  color: #474747;
+  margin-bottom: 10px;
+}
+.resume-sub-tittle {
+  font-weight: 600;
+  font-size: 20px;
+  color: #757575;
+  margin-bottom: 20px;
+}
+.resume-description {
+  font-size: 16px;
+  font-weight: 400;
+  color: #757575;
+}
+
+.resume-item {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.resume-button {
+  margin-top: 50px;
+  text-align: center;
 }
