--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,21 +18,23 @@
 nav {
   display: flex;
   justify-content: space-between;
-  margin: 50px 200px;
+  margin: 0 200px;
 }
-.nav-title {
+.nav-tittle {
   font-weight: 800;
   font-size: 45px;
 }
 nav li {
   list-style: none;
   margin-left: 50px;
+  font-size: 20px;
 }
 nav ul {
   display: flex;
   align-items: center;
 }
 .btn-primary {
+  margin-top: 15px;
   font-weight: 700;
   font-size: 20px;
   border: 0;
@@ -165,4 +167,34 @@ main {
 .resume-button {
   margin-top: 50px;
   text-align: center;
+}
+/* Contract Styles */
+
+.contract {
+  display: flex;
+  background: #fff8f3;
+  padding: 130px 100px;
+}
+
+.contrat .section-tittle {
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+.contract .section-description {
+  margin-bottom: 30px;
+  text-align: left;
+  max-width: 90%;
+}
+.contract input[type="text"],
+input[type="email"],
+textarea {
+  margin-bottom: 24px;
+  border: 0;
+  width: 100%;
+  padding: 18px 30px;
+}
+
+.contract a {
+  text-decoration: none;
 }
